--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@elastic/elasticsearch": "^9.2.0",
+    "@elastic/elasticsearch": "^8.19.1",
+    "@haaremy/hmydesign": "^1.2.3",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1"
