--- a/package.json
+++ b/package.json
@@ -11,21 +11,24 @@
   "dependencies": {
     "@elastic/elasticsearch": "^8.19.1",
     "@haaremy/hmydesign": "^1.2.3",
+    "autoprefixer": "^10.4.23",
+    "clsx": "^2.1.1",
     "compromise": "^14.14.5",
     "next": "16.0.10",
+    "postcss": "^8.5.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "string-similarity": "^4.0.4"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/string-similarity": "^4.0.2",
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5"
   }
 }
