--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.19.1",
-    "@haaremy/hmydesign": "^1.2.3",
     "autoprefixer": "^10.4.23",
     "clsx": "^2.1.1",
     "compromise": "^14.14.5",
     "next": "16.0.10",
+    "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^20",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/string-similarity": "^4.0.2",
